--- a/2.2 debezium-cdc/yc-connect/connect-distributed.properties
+++ b/2.2 debezium-cdc/yc-connect/connect-distributed.properties
@@ -27,6 +27,20 @@ sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule  requir
 ssl.truststore.location=/kafka/config/client.truststore.jks
 ssl.truststore.password=pass@word1
 
+# Producer connect properties
+producer.sasl.mechanism=SCRAM-SHA-512
+producer.security.protocol=SASL_SSL
+producer.ssl.truststore.location=/etc/kafka-connect-worker/client.truststore.jks
+producer.ssl.truststore.password=pass@word1
+producer.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="inventory" password="pass@word1";
+
+# Consumer connect properties
+consumer.sasl.mechanism=SCRAM-SHA-512
+consumer.security.protocol=SASL_SSL
+consumer.ssl.truststore.location=/etc/kafka-connect-worker/client.truststore.jks
+consumer.ssl.truststore.password=pass@word1
+consumer.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="inventory" password="pass@word1";
+
 # unique name for the cluster, used in forming the Connect cluster group. Note that this must not conflict with consumer group IDs
 group.id=connect-cluster
 
