Kafka connect requires connect-distributed.properties

--- a/debezium-cdc/yc-connect/Dockerfile
+++ b/debezium-cdc/yc-connect/Dockerfile
@@ -7,3 +7,4 @@ LABEL maintainer="Yandex Cloud Architects Community"
 #
 COPY --chown=kafka:kafka YandexCA.crt $KAFKA_HOME/config/YandexCA.crt
 COPY --chown=kafka:kafka client.truststore.jks $KAFKA_HOME/config/client.truststore.jks
+COPY --chown=kafka:kafka connect-distributed.properties $KAFKA_HOME/config/connect-distributed.properties
